--- a/index.html
+++ b/index.html
@@ -7879,7 +7879,8 @@
                     r.setAttribute("href", n)
                 }
             }
-        
+        </script>
+        <script>
             "use strict";
             var animator = ( () => {
                 var z = Object.defineProperty;
